prevent viewport bleeding

--- a/whackamole/style.css
+++ b/whackamole/style.css
@@ -12,7 +12,7 @@ body {
 #main {
 	border: 1px solid black;
 	width: 95%;
-	height: 95%;
+	height: 90%;
 	padding: 10px;
 	display: flex;
 	cursor: crosshair;
